parser/parser.js
window.PEGGY = // @generated by Peggy 4.0.3.
//
// https://peggyjs.org/
(function() {
  "use strict";

function peg$subclass(child, parent) {
  function C() { this.constructor = child; }
  C.prototype = parent.prototype;
  child.prototype = new C();
}

function peg$SyntaxError(message, expected, found, location) {
  var self = Error.call(this, message);
  // istanbul ignore next Check is a necessary evil to support older environments
  if (Object.setPrototypeOf) {
    Object.setPrototypeOf(self, peg$SyntaxError.prototype);
  }
  self.expected = expected;
  self.found = found;
  self.location = location;
  self.name = "SyntaxError";
  return self;
}

peg$subclass(peg$SyntaxError, Error);

function peg$padEnd(str, targetLength, padString) {
  padString = padString || " ";
  if (str.length > targetLength) { return str; }
  targetLength -= str.length;
  padString += padString.repeat(targetLength);
  return str + padString.slice(0, targetLength);
}

peg$SyntaxError.prototype.format = function(sources) {
  var str = "Error: " + this.message;
  if (this.location) {
    var src = null;
    var k;
    for (k = 0; k < sources.length; k++) {
      if (sources[k].source === this.location.source) {
        src = sources[k].text.split(/\r\n|\n|\r/g);
        break;
      }
    }
    var s = this.location.start;
    var offset_s = (this.location.source && (typeof this.location.source.offset === "function"))
      ? this.location.source.offset(s)
      : s;
    var loc = this.location.source + ":" + offset_s.line + ":" + offset_s.column;
    if (src) {
      var e = this.location.end;
      var filler = peg$padEnd("", offset_s.line.toString().length, ' ');
      var line = src[s.line - 1];
      var last = s.line === e.line ? e.column : line.length + 1;
      var hatLen = (last - s.column) || 1;
      str += "\n --> " + loc + "\n"
          + filler + " |\n"
          + offset_s.line + " | " + line + "\n"
          + filler + " | " + peg$padEnd("", s.column - 1, ' ')
          + peg$padEnd("", hatLen, "^");
    } else {
      str += "\n at " + loc;
    }
  }
  return str;
};

peg$SyntaxError.buildMessage = function(expected, found) {
  var DESCRIBE_EXPECTATION_FNS = {
    literal: function(expectation) {
      return "\"" + literalEscape(expectation.text) + "\"";
    },

    class: function(expectation) {
      var escapedParts = expectation.parts.map(function(part) {
        return Array.isArray(part)
          ? classEscape(part[0]) + "-" + classEscape(part[1])
          : classEscape(part);
      });

      return "[" + (expectation.inverted ? "^" : "") + escapedParts.join("") + "]";
    },

    any: function() {
      return "any character";
    },

    end: function() {
      return "end of input";
    },

    other: function(expectation) {
      return expectation.description;
    }
  };

  function hex(ch) {
    return ch.charCodeAt(0).toString(16).toUpperCase();
  }

  function literalEscape(s) {
    return s
      .replace(/\\/g, "\\\\")
      .replace(/"/g,  "\\\"")
      .replace(/\0/g, "\\0")
      .replace(/\t/g, "\\t")
      .replace(/\n/g, "\\n")
      .replace(/\r/g, "\\r")
      .replace(/[\x00-\x0F]/g,          function(ch) { return "\\x0" + hex(ch); })
      .replace(/[\x10-\x1F\x7F-\x9F]/g, function(ch) { return "\\x"  + hex(ch); });
  }

  function classEscape(s) {
    return s
      .replace(/\\/g, "\\\\")
      .replace(/\]/g, "\\]")
      .replace(/\^/g, "\\^")
      .replace(/-/g,  "\\-")
      .replace(/\0/g, "\\0")
      .replace(/\t/g, "\\t")
      .replace(/\n/g, "\\n")
      .replace(/\r/g, "\\r")
      .replace(/[\x00-\x0F]/g,          function(ch) { return "\\x0" + hex(ch); })
      .replace(/[\x10-\x1F\x7F-\x9F]/g, function(ch) { return "\\x"  + hex(ch); });
  }

  function describeExpectation(expectation) {
    return DESCRIBE_EXPECTATION_FNS[expectation.type](expectation);
  }

  function describeExpected(expected) {
    var descriptions = expected.map(describeExpectation);
    var i, j;

    descriptions.sort();

    if (descriptions.length > 0) {
      for (i = 1, j = 1; i < descriptions.length; i++) {
        if (descriptions[i - 1] !== descriptions[i]) {
          descriptions[j] = descriptions[i];
          j++;
        }
      }
      descriptions.length = j;
    }

    switch (descriptions.length) {
      case 1:
        return descriptions[0];

      case 2:
        return descriptions[0] + " or " + descriptions[1];

      default:
        return descriptions.slice(0, -1).join(", ")
          + ", or "
          + descriptions[descriptions.length - 1];
    }
  }

  function describeFound(found) {
    return found ? "\"" + literalEscape(found) + "\"" : "end of input";
  }

  return "Expected " + describeExpected(expected) + " but " + describeFound(found) + " found.";
};

function peg$parse(input, options) {
  options = options !== undefined ? options : {};

  var peg$FAILED = {};
  var peg$source = options.grammarSource;

  var peg$startRuleFunctions = { Start: peg$parseStart };
  var peg$startRuleFunction = peg$parseStart;

  var peg$c0 = ".global";
  var peg$c1 = ".section .data";
  var peg$c2 = ".data";
  var peg$c3 = ".bss";
  var peg$c4 = ".section";
  var peg$c5 = ".text";
  var peg$c6 = ":";
  var peg$c7 = "ldr";
  var peg$c8 = "=";
  var peg$c9 = "str";
  var peg$c10 = "add";
  var peg$c11 = "sub";
  var peg$c12 = "mul";
  var peg$c13 = "udiv";
  var peg$c14 = "sdiv";
  var peg$c15 = "and";
  var peg$c16 = "orr";
  var peg$c17 = "eor";
  var peg$c18 = "mvn";
  var peg$c19 = "mov";
  var peg$c20 = "svc";
  var peg$c21 = ".";
  var peg$c22 = "asciz";
  var peg$c23 = "ascii";
  var peg$c24 = "space";
  var peg$c25 = "skip";
  var peg$c26 = "-";
  var peg$c27 = "\"";
  var peg$c28 = ",";
  var peg$c29 = "[";
  var peg$c30 = "]";
  var peg$c31 = "//";
  var peg$c32 = "\r\n";

  var peg$r0 = /^[a-zA-Z]/;
  var peg$r1 = /^[0-9]/;
  var peg$r2 = /^[a-zA-Z_]/;
  var peg$r3 = /^[a-zA-Z0-9_]/;
  var peg$r4 = /^[^"]/;
  var peg$r5 = /^[\n\r]/;
  var peg$r6 = /^[ \t\n\r]/;

  var peg$e0 = peg$literalExpectation(".global", false);
  var peg$e1 = peg$literalExpectation(".section .data", false);
  var peg$e2 = peg$literalExpectation(".data", false);
  var peg$e3 = peg$literalExpectation(".bss", false);
  var peg$e4 = peg$literalExpectation(".section", false);
  var peg$e5 = peg$literalExpectation(".text", false);
  var peg$e6 = peg$literalExpectation(":", false);
  var peg$e7 = peg$literalExpectation("ldr", false);
  var peg$e8 = peg$literalExpectation("=", false);
  var peg$e9 = peg$literalExpectation("str", false);
  var peg$e10 = peg$literalExpectation("add", false);
  var peg$e11 = peg$literalExpectation("sub", false);
  var peg$e12 = peg$literalExpectation("mul", false);
  var peg$e13 = peg$literalExpectation("udiv", false);
  var peg$e14 = peg$literalExpectation("sdiv", false);
  var peg$e15 = peg$literalExpectation("and", false);
  var peg$e16 = peg$literalExpectation("orr", false);
  var peg$e17 = peg$literalExpectation("eor", false);
  var peg$e18 = peg$literalExpectation("mvn", false);
  var peg$e19 = peg$literalExpectation("mov", false);
  var peg$e20 = peg$literalExpectation("svc", false);
  var peg$e21 = peg$literalExpectation(".", false);
  var peg$e22 = peg$literalExpectation("asciz", false);
  var peg$e23 = peg$literalExpectation("ascii", false);
  var peg$e24 = peg$literalExpectation("space", false);
  var peg$e25 = peg$literalExpectation("skip", false);
  var peg$e26 = peg$classExpectation([["a", "z"], ["A", "Z"]], false, false);
  var peg$e27 = peg$classExpectation([["0", "9"]], false, false);
  var peg$e28 = peg$classExpectation([["a", "z"], ["A", "Z"], "_"], false, false);
  var peg$e29 = peg$classExpectation([["a", "z"], ["A", "Z"], ["0", "9"], "_"], false, false);
  var peg$e30 = peg$otherExpectation("integer");
  var peg$e31 = peg$literalExpectation("-", false);
  var peg$e32 = peg$otherExpectation("string");
  var peg$e33 = peg$literalExpectation("\"", false);
  var peg$e34 = peg$classExpectation(["\""], true, false);
  var peg$e35 = peg$literalExpectation(",", false);
  var peg$e36 = peg$literalExpectation("[", false);
  var peg$e37 = peg$literalExpectation("]", false);
  var peg$e38 = peg$literalExpectation("//", false);
  var peg$e39 = peg$anyExpectation();
  var peg$e40 = peg$classExpectation(["\n", "\r"], false, false);
  var peg$e41 = peg$literalExpectation("\r\n", false);
  var peg$e42 = peg$otherExpectation("whitespace");
  var peg$e43 = peg$classExpectation([" ", "\t", "\n", "\r"], false, false);

  var peg$f0 = function(gs, ds1, bss1, ts, ds2, bss2) {
    let dataSectionConcat = []
    if (ds1 != null) dataSectionConcat = dataSectionConcat.concat(ds1.value);
    if (ds2 != null) dataSectionConcat = dataSectionConcat.concat(ds2.value);

    if (bss1 != null) dataSectionConcat = dataSectionConcat.concat(bss1.value);
    if (bss2 != null) dataSectionConcat = dataSectionConcat.concat(bss2.value);
    // Agregando raiz cst
    let idRoot = cst.newNode();
    newPath(idRoot, 'Start', [gs, ds1, bss1, ts, ds2, bss2 ]);
    return new Root(gs, dataSectionConcat, ts, cst);
  };
  var peg$f1 = function(id) {
    let idRoot = cst.newNode();
    newPath(idRoot, 'GlobalSection', ['.global', id]);
    return { id: idRoot, name: id};
  };
  var peg$f2 = function(dec) {
    let idRoot = cst.newNode();
    newPath(idRoot, 'DataSection', ['.section', '.data'].concat(dec));
    return { id: idRoot, value: dec};
  };
  var peg$f3 = function(dec) {
    let idRoot = cst.newNode();
    newPath(idRoot, 'DataSection', ['.data'].concat(dec));
    return { id: idRoot, value: dec};
  };
  var peg$f4 = function(dec) {
    let idRoot = cst.newNode();
    newPath(idRoot, 'BssSection', ['.data'].concat(dec));
    return { id: idRoot, value: dec};
  };
  var peg$f5 = function(dec) {
    let idRoot = cst.newNode();
    newPath(idRoot, 'BssSection', ['.data'].concat(dec));
    return { id: idRoot, value: dec};
  };
  var peg$f6 = function(ident, ins) {
    let idInst = cst.newNode();
    newPath(idInst, ident, ins);
    let idRoot = cst.newNode();
    newPath(idRoot, 'TextSection', [{ id:idInst }]);
    return new TextSection(idRoot, 'TextSection', ident, ins);
  };
  var peg$f7 = function(ins) {
    return ins;
  };
  var peg$f8 = function(ins) {
    return ins;
  };
  var peg$f9 = function(ins) {
    return ins;
  };
  var peg$f10 = function(ins) {
    return ins;
  };
  var peg$f11 = function(ldr) {
    return ldr;
  };
  var peg$f12 = function(reg, id) {
    const loc = location()?.start;
    let idRoot = cst.newNode();
    newPath(idRoot, 'Load', ['ldr', reg, ',', id]);
    return new Ldr(loc?.line, loc?.column, idRoot, reg.name, id); 
  };
  var peg$f13 = function(reg1, reg2, reg3) {
    const loc = location()?.start;
    const idRoot = cst.newNode();
    newPath(idRoot, 'Arithmetic', ['add', reg1, 'COMA', reg2, 'COMA', reg3]);
    return new Operation(loc?.line, loc?.column, idRoot, reg1.name, reg2.name, reg3.name);
  };
  var peg$f14 = function(reg1, reg2, reg3) {
    const loc = location()?.start;
    const idRoot = cst.newNode();
    newPath(idRoot, 'Arithmetic', ['sub', reg1, 'COMA', reg2, 'COMA', reg3]);
    return new Sub(loc?.line, loc?.column, idRoot, reg1.name, reg2.name, reg3.name);
  };
  var peg$f15 = function(reg1, reg2, reg3) {
    const loc = location()?.start;
    const idRoot = cst.newNode();
    newPath(idRoot, 'Arithmetic', ['mul', reg1, 'COMA', reg2, 'COMA', reg3]);
    return new Mul(loc?.line, loc?.column, idRoot, reg1.name, reg2.name, reg3.name);
  };
  var peg$f16 = function(reg1, reg2, reg3) {
    const loc = location()?.start;
    const idRoot = cst.newNode();
    newPath(idRoot, 'Arithmetic', ['udiv', reg1, 'COMA', reg2, 'COMA', reg3]);
    return new Udiv(loc?.line, loc?.column, idRoot, reg1.name, reg2.name, reg3.name);
  };
  var peg$f17 = function(reg1, reg2, reg3) {
    const loc = location()?.start;
    const idRoot = cst.newNode();
    newPath(idRoot, 'Arithmetic', ['sdiv', reg1, 'COMA', reg2, 'COMA', reg3]);
    return new Sdiv(loc?.line, loc?.column, idRoot, reg1.name, reg2.name, reg3.name);
  };
  var peg$f18 = function(reg1, reg2, reg3) {
    const loc = location()?.start;
    let idRoot = cst.newNode();
    newPath(idRoot, 'Logic', ['and', reg1, 'COMA', reg2, 'COMA', reg3]);
    return new Operation(loc?.line, loc?.column, idRoot, 'Logic', 'and', reg1.name, reg2.name, reg3.name, null);
  };
  var peg$f19 = function(reg1, reg2, reg3) {
    const loc = location()?.start;
    let idRoot = cst.newNode();
    newPath(idRoot, 'Logic', ['orr', reg1, 'COMA', reg2, 'COMA', reg3]);
    return new Operation(loc?.line, loc?.column, idRoot, 'Logic', 'orr', reg1.name, reg2.name, reg3.name, null);
  };
  var peg$f20 = function(reg1, reg2, reg3) {
    const loc = location()?.start;
    let idRoot = cst.newNode();
    newPath(idRoot, 'Logic', ['eor', reg1, 'COMA', reg2, 'COMA', reg3]);
    return new Operation(loc?.line, loc?.column, idRoot, 'Logic', 'eor', reg1.name, reg2.name, reg3.name, null);
  };
  var peg$f21 = function(reg1, reg2) {
    const loc = location()?.start;
    let idRoot = cst.newNode();
    newPath(idRoot, 'Logic', ['mvn', reg1, 'COMA', reg2]);
    return new Operation(loc?.line, loc?.column, idRoot, 'Logic', 'mvn', reg1.name, reg2.name, null, null);
  };
  var peg$f22 = function(reg1, reg2) {
    const loc = location()?.start;
    const idRoot = cst.newNode();
    newPath(idRoot, 'Move', ['mov', reg1, 'COMA', reg2]);
    return new Move(loc?.line, loc?.column, idRoot, reg1.name, reg2.name);
  };
  var peg$f23 = function(reg, int) {
    const loc = location()?.start;
    const idRoot = cst.newNode();
    newPath(idRoot, 'Move', ['mov', reg, 'COMA', int]);
    return new Move(loc?.line, loc?.column, idRoot, reg.name, int);
  };
  var peg$f24 = function(int) {
    const loc = location()?.start;
    let idRoot = cst.newNode();
    newPath(idRoot, 'SystemCall', ["svc", int]);
    return new SystemCall(loc?.line, loc?.column, idRoot, int);
  };
  var peg$f25 = function(id, type, exp) {
    const loc = location()?.start;
    let idRoot = cst.newNode();
    newPath(idRoot, 'Declaration', [id, ":", type, exp]);
    return new Declaration(loc?.line, loc?.column, idRoot, id, type.value, exp);
  };
  var peg$f26 = function() {
    let idRoot = cst.newNode();
    newPath(idRoot, 'TYPE', ['asciz']);
    return { id: idRoot, value: Type.ASCIZ }
  };
  var peg$f27 = function() {
    let idRoot = cst.newNode();
    newPath(idRoot, 'TYPE', ['ascii']);
    return { id: idRoot, value: Type.ASCIZ }
  };
  var peg$f28 = function() {
    let idRoot = cst.newNode();
    newPath(idRoot, 'TYPE', ['space']);
    return { id: idRoot, value: Type.SPACE }
  };
  var peg$f29 = function() {
    let idRoot = cst.newNode();
    newPath(idRoot, 'TYPE', ['skip']);
    return { id: idRoot, value: Type.SKIP }
  };
  var peg$f30 = function() {
    let idRoot = cst.newNode(); 
    //newPath(idRoot, 'register', [text()]);
    return { id: idRoot, name: text() }
  };
  var peg$f31 = function(id) {
    let completeId = id[0]+id[1]?.join('');
    return completeId; 
  };
  var peg$f32 = function(str) { return str };
  var peg$f33 = function(int) { return int };
  var peg$f34 = function() {
    const loc = location()?.start;
    let idRoot = cst.newNode();
    newPath(idRoot, 'integer', [text()]);
    return new Primitive(loc?.line, loc?.column, idRoot, 'integer', Type.SPACE, parseInt(text(), 10));
  };
  var peg$f35 = function(chars) {
    const loc = location()?.start;
    let idRoot = cst.newNode();
    newPath(idRoot, 'string', [chars.join('')]);
    return new Primitive(loc?.line, loc?.column, idRoot, 'string', Type.ASCIZ, chars.join(''));
  };
  var peg$currPos = options.peg$currPos | 0;
  var peg$savedPos = peg$currPos;
  var peg$posDetailsCache = [{ line: 1, column: 1 }];
  var peg$maxFailPos = peg$currPos;
  var peg$maxFailExpected = options.peg$maxFailExpected || [];
  var peg$silentFails = options.peg$silentFails | 0;

  var peg$result;

  if (options.startRule) {
    if (!(options.startRule in peg$startRuleFunctions)) {
      throw new Error("Can't start parsing from rule \"" + options.startRule + "\".");
    }

    peg$startRuleFunction = peg$startRuleFunctions[options.startRule];
  }

  function text() {
    return input.substring(peg$savedPos, peg$currPos);
  }

  function offset() {
    return peg$savedPos;
  }

  function range() {
    return {
      source: peg$source,
      start: peg$savedPos,
      end: peg$currPos
    };
  }

  function location() {
    return peg$computeLocation(peg$savedPos, peg$currPos);
  }

  function expected(description, location) {
    location = location !== undefined
      ? location
      : peg$computeLocation(peg$savedPos, peg$currPos);

    throw peg$buildStructuredError(
      [peg$otherExpectation(description)],
      input.substring(peg$savedPos, peg$currPos),
      location
    );
  }

  function error(message, location) {
    location = location !== undefined
      ? location
      : peg$computeLocation(peg$savedPos, peg$currPos);

    throw peg$buildSimpleError(message, location);
  }

  function peg$literalExpectation(text, ignoreCase) {
    return { type: "literal", text: text, ignoreCase: ignoreCase };
  }

  function peg$classExpectation(parts, inverted, ignoreCase) {
    return { type: "class", parts: parts, inverted: inverted, ignoreCase: ignoreCase };
  }

  function peg$anyExpectation() {
    return { type: "any" };
  }

  function peg$endExpectation() {
    return { type: "end" };
  }

  function peg$otherExpectation(description) {
    return { type: "other", description: description };
  }

  function peg$computePosDetails(pos) {
    var details = peg$posDetailsCache[pos];
    var p;

    if (details) {
      return details;
    } else {
      if (pos >= peg$posDetailsCache.length) {
        p = peg$posDetailsCache.length - 1;
      } else {
        p = pos;
        while (!peg$posDetailsCache[--p]) {}
      }

      details = peg$posDetailsCache[p];
      details = {
        line: details.line,
        column: details.column
      };

      while (p < pos) {
        if (input.charCodeAt(p) === 10) {
          details.line++;
          details.column = 1;
        } else {
          details.column++;
        }

        p++;
      }

      peg$posDetailsCache[pos] = details;

      return details;
    }
  }

  function peg$computeLocation(startPos, endPos, offset) {
    var startPosDetails = peg$computePosDetails(startPos);
    var endPosDetails = peg$computePosDetails(endPos);

    var res = {
      source: peg$source,
      start: {
        offset: startPos,
        line: startPosDetails.line,
        column: startPosDetails.column
      },
      end: {
        offset: endPos,
        line: endPosDetails.line,
        column: endPosDetails.column
      }
    };
    if (offset && peg$source && (typeof peg$source.offset === "function")) {
      res.start = peg$source.offset(res.start);
      res.end = peg$source.offset(res.end);
    }
    return res;
  }

  function peg$fail(expected) {
    if (peg$currPos < peg$maxFailPos) { return; }

    if (peg$currPos > peg$maxFailPos) {
      peg$maxFailPos = peg$currPos;
      peg$maxFailExpected = [];
    }

    peg$maxFailExpected.push(expected);
  }

  function peg$buildSimpleError(message, location) {
    return new peg$SyntaxError(message, null, null, location);
  }

  function peg$buildStructuredError(expected, found, location) {
    return new peg$SyntaxError(
      peg$SyntaxError.buildMessage(expected, found),
      expected,
      found,
      location
    );
  }

  function peg$parseStart() {
    var s0, s1, s2, s3, s4, s5, s6, s7, s8, s9, s10, s11;

    s0 = peg$currPos;
    s1 = peg$parseGlobalSection();
    if (s1 !== peg$FAILED) {
      s2 = peg$parse_();
      s3 = peg$parseDataSection();
      if (s3 === peg$FAILED) {
        s3 = null;
      }
      s4 = peg$parse_();
      s5 = peg$parseBssSection();
      if (s5 === peg$FAILED) {
        s5 = null;
      }
      s6 = peg$parse_();
      s7 = peg$parseTextSection();
      if (s7 !== peg$FAILED) {
        s8 = peg$parse_();
        s9 = peg$parseDataSection();
        if (s9 === peg$FAILED) {
          s9 = null;
        }
        s10 = peg$parse_();
        s11 = peg$parseBssSection();
        if (s11 === peg$FAILED) {
          s11 = null;
        }
        peg$savedPos = s0;
        s0 = peg$f0(s1, s3, s5, s7, s9, s11);
      } else {
        peg$currPos = s0;
        s0 = peg$FAILED;
      }
    } else {
      peg$currPos = s0;
      s0 = peg$FAILED;
    }

    return s0;
  }

  function peg$parseGlobalSection() {
    var s0, s1, s2, s3, s4;

    s0 = peg$currPos;
    if (input.substr(peg$currPos, 7) === peg$c0) {
      s1 = peg$c0;
      peg$currPos += 7;
    } else {
      s1 = peg$FAILED;
      if (peg$silentFails === 0) { peg$fail(peg$e0); }
    }
    if (s1 !== peg$FAILED) {
      s2 = peg$parse_();
      s3 = peg$parseID();
      if (s3 !== peg$FAILED) {
        s4 = peg$parse_();
        peg$savedPos = s0;
        s0 = peg$f1(s3);
      } else {
        peg$currPos = s0;
        s0 = peg$FAILED;
      }
    } else {
      peg$currPos = s0;
      s0 = peg$FAILED;
    }

    return s0;
  }

  function peg$parseDataSection() {
    var s0, s1, s2, s3, s4;

    s0 = peg$currPos;
    if (input.substr(peg$currPos, 14) === peg$c1) {
      s1 = peg$c1;
      peg$currPos += 14;
    } else {
      s1 = peg$FAILED;
      if (peg$silentFails === 0) { peg$fail(peg$e1); }
    }
    if (s1 !== peg$FAILED) {
      s2 = peg$parse_();
      s3 = [];
      s4 = peg$parseDeclarations();
      while (s4 !== peg$FAILED) {
        s3.push(s4);
        s4 = peg$parseDeclarations();
      }
      peg$savedPos = s0;
      s0 = peg$f2(s3);
    } else {
      peg$currPos = s0;
      s0 = peg$FAILED;
    }
    if (s0 === peg$FAILED) {
      s0 = peg$currPos;
      if (input.substr(peg$currPos, 5) === peg$c2) {
        s1 = peg$c2;
        peg$currPos += 5;
      } else {
        s1 = peg$FAILED;
        if (peg$silentFails === 0) { peg$fail(peg$e2); }
      }
      if (s1 !== peg$FAILED) {
        s2 = peg$parse_();
        s3 = [];
        s4 = peg$parseDeclarations();
        while (s4 !== peg$FAILED) {
          s3.push(s4);
          s4 = peg$parseDeclarations();
        }
        peg$savedPos = s0;
        s0 = peg$f3(s3);
      } else {
        peg$currPos = s0;
        s0 = peg$FAILED;
      }
    }

    return s0;
  }

  function peg$parseBssSection() {
    var s0, s1, s2, s3, s4;
